--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper:6.2.0
     hostname: zookeeper
-    container_name: zookeeper
+    container_name: zookeeper-1
     ports:
       - "2181:2181"
     environment:
@@ -13,7 +13,7 @@ services:
   kafka:
     image: confluentinc/cp-kafka:6.2.0
     hostname: broker
-    container_name: broker
+    container_name: kafka-1
     depends_on:
       - zookeeper
     ports:
