--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "lint": "standard"
   },
   "devDependencies": {
-    "jest": "^27.2.1"
+    "jest": "^27.2.1",
+    "standard": "^16.0.4"
   },
   "dependencies": {
     "kafkajs": "^1.15.0",
