--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kafka-test-helper",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/chrvadala/kafka-test-helper.git",
   "author": "Christian Vadalà <chr.vadala@gmail.com>",
   "license": "MIT",
