--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "test": "npm run test:standard && npm run test:waitForKafkaReady && npm run test:jest",
+    "test": "npm run test:standard && npm run test:waitForKafkaReady && npm run test:coverage",
     "test:jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:standard": "standard",
