--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test:jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:standard": "standard",
-    "test:waitForKafkaReady": "node ./waitForKafkaReady.js"
+    "test:waitForKafkaReady": "node ./waitForKafkaReady.js",
+    "docs:api": "jsdoc2md --template docs/_api.md.template.hbs --example-lang js --heading-depth 3 src/KafkaTestHelper.js > docs/api.md",
+    "build": "npm run docs:api"
   },
   "devDependencies": {
     "jest": "^27.2.1",
-    "standard": "^16.0.4",
-    "kafkajs": "^1.15.0"
+    "jsdoc-to-markdown": "^7.1.0",
+    "kafkajs": "^1.15.0",
+    "standard": "^16.0.4"
   },
   "peerDependencies": {
     "kafkajs": "^1.15.0"
