--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "start": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test": "npm run test:standard && npm run test:waitForKafkaReady && npm run test:coverage",
-    "test:jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test:jest": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "test:standard": "standard",
     "test:waitForKafkaReady": "node ./waitForKafkaReady.js",
     "docs:api": "jsdoc2md --template docs/templates/api.hbs --example-lang js --heading-depth 2 src/KafkaTestHelper.js > docs/api.md",
     "build": "npm run docs:api",
-    "test:examples": "node --experimental-vm-modules node_modules/jest/bin/jest.js examples/*"
+    "test:examples": "NODE_OPTIONS=--experimental-vm-modules jest examples/*"
   },
   "devDependencies": {
     "jest": "^27.2.1",
