upgrades release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Release library
-        uses: chrvadala/github-actions/nodejs-release-library-action@main
+        uses: chrvadala/github-actions/nodejs-release-library-action@v1
         with:
           NEXT_VERSION: ${{ github.event.inputs.NEXT_VERSION }}
           NPM_TOKEN: ${{ secrets.npm_token }}
