--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,28 @@ name: Release
 
 on:
   workflow_dispatch:
+     services:
+      zookeeper:
+        image: confluentinc/cp-zookeeper:6.2.0
+        ports:
+          - 2181:2181
+        env:
+          ZOOKEEPER_CLIENT_PORT: 2181
+          ZOOKEEPER_TICK_TIME: 2000
+      kafka:
+          image: confluentinc/cp-kafka:6.2.0
+          ports:
+            - 29092:29092
+            - 9092:9092
+          env:
+            KAFKA_BROKER_ID: 1
+            KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+            KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+            KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
    inputs:
       NEXT_VERSION:
         description: Define next version (major/minor/patch)
@@ -16,6 +38,11 @@ jobs:
     if: ${{ github.event.inputs.REPOSITORY_NAME ==  github.repository }}
     steps:
       - uses: actions/checkout@v2
+      - name: Create .env file
+        run: |
+          cat > .env <<EOF
+            KAFKA_SERVER="localhost:9092"
+          EOF
       - name: Release library
         uses: chrvadala/github-actions/nodejs-release-library-action@v1
         with:
