--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kafka-test-helper",
   "version": "1.0.0",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "repository": "https://github.com/chrvadala/kafka-test-helper.git",
   "author": "Christian Vadalà <chr.vadala@gmail.com>",
   "license": "MIT",
